# OpenNI2

./: CMakeLists.txt  Makefile
Config/: 55-primesense-usb.rules  OpenNI2.pc
Source/: CMakeLists.txt
Source/Core/: OniContext.cpp
Source/Drivers/OniFile/: CMakeLists.txt  Makefile
Source/Drivers/PS1080/: CMakeLists.txt  Makefile
Source/Drivers/PS1080/Sensor/: XnSensor.cpp
